--- a/Presentation.Dashboard/appsettings.json
+++ b/Presentation.Dashboard/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=DBTest;Integrated Security=True"
+    "DefaultConnection": "Data Source=.\\GVRS_DB;Initial Catalog=DBTest;Integrated Security=True"
   }
 }
