--- a/Presentation.Dashboard/appsettings.json
+++ b/Presentation.Dashboard/appsettings.json
@@ -9,5 +9,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=.\\GVRS_DB;Initial Catalog=DBTest;Integrated Security=True"
+  },
+  "WebSettings": {
+    "webServices": "https://localhost:44391/",
+    "webDashboard": "https://localhost:44315/"
   }
 }
