--- a/Presentation.Dashboard/Presentation.Dashboard.csproj
+++ b/Presentation.Dashboard/Presentation.Dashboard.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
     <PackageReference Include="Telerik.UI.for.AspNet.Core.Trial" Version="2021.1.330" />
 	  <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.3" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.3">
