--- a/ProductsModel/Business.ModelView.csproj
+++ b/ProductsModel/Business.ModelView.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Infrastructure.Utilities\Infrastructure.Utilities.csproj" />
+  </ItemGroup>
+
 </Project>
